<resources>
    <string name="app_name">EBS</string>
    <string name="app_title">EarbudSwitch</string>
    <string name="text_auth_code">Auth Code</string>

    <string name="text_qr_code">QRCode</string>

    <string name="notification_blank_content">Foreground Service Running</string>
    <string name="notification_scan_content">EBS Scanning for %1$s</string>
    <string name="notification_advertise_content">%1$s Advertising</string>
    <string name="filter_mode_allow">Allow Mode</string>
    <string name="filter_mode_block">Block Mode</string>

    <string name="toast_camera_permission_denied">To scan QRCode, please grant the Camera Permission</string>

    <string name="toast_same_key">Same Key Detected</string>

    <string name="switch_crashlytics">Upload crash</string>
    <string name="switch_background_scan">Background Scan</string>
    <string name="switch_reroute_calls">Reroute Calls</string>
    <string name="switch_popup_window">Popup Window</string>
    <string name="switch_simultaneous_switch">Simultaneous Switch</string>

    <string name="dialog_disconnect_title">Disconnect device?</string>
    <string name="dialog_disconnect_content">Your device will disconnect from %1$s.</string>
    <string name="dialog_potential_issues_title">Potential issues</string>
    <string name="dialog_potential_issues_content">These settings are disabled and that may cause no scan results</string>

    <string name="dialog_button_back">Back</string>
    <string name="dialog_button_cancel">Cancel</string>
    <string name="dialog_button_ok">OK</string>

    <string name="text_bluetooth_diable">Bluetooth Service Disabled</string>
    <string name="text_location_diable">Location Service Disabled</string>

    <string name="toast_bth_on">Turning on Bluetooth...</string>

    <string name="action_about">About</string>
    <string name="welcome_button_next">Next</string>

    <string name="fab_description_scan">Scan QR Code</string>
    <string name="fab_description_new">Generate new random key</string>
    <string name="intro_introduction">Switch your bluetooth earbuds connection</string>
    <string name="intro_permission">Permission</string>
    <string name="intro_location_permission">Location Permission</string>
    <string name="text_location_permission">Required to start the BLE scan</string>
    <string name="intro_camera_permission">Camera Permission</string>
    <string name="text_camera_permission">Required to scan QRCode</string>
    <string name="snack_permission">Please grant all these permissions</string>

    <string name="notification_audio_gain">Audio Focus Gain</string>
    <string name="notification_audio_loss">Audio Focus Loss</string>
    <string name="notification_audio_wait">Waiting for Regain Audio Focus</string>
    <string name="notification_audio_error">Audio Focus Monitor Unknown Error %1%d</string>
</resources>