<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/motion_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/activity_settings_scene">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/app_title" />

    <!--黑白名单 & TWS列表-->
    <androidx.cardview.widget.CardView
        android:id="@+id/container_device"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:cardCornerRadius="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="12dp">

            <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                android:id="@+id/swipeRefresh"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:scrollbars="none">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rc_devices"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fadingEdgeLength="20dp"
                    android:overScrollMode="never"
                    android:requiresFadingEdge="vertical" />
            </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/filterModeSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/filterModeArray"
                android:paddingVertical="8dp" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/outsideGuideline"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.42" />

    <!--通讯逻辑 & 隐私设置 & 验证密钥-->
    <androidx.cardview.widget.CardView
        android:id="@+id/container_settings"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:cardCornerRadius="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/insideGuideline"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.42" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/sw_crashlytics"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/switch_crashlytics"
                app:layout_constraintBottom_toTopOf="@id/sw_reroute_calls"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/insideGuideline"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/sw_reroute_calls"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/switch_reroute_calls"
                app:layout_constraintBottom_toTopOf="@id/sw_background_scan"
                app:layout_constraintEnd_toEndOf="@id/sw_crashlytics"
                app:layout_constraintStart_toStartOf="@id/sw_crashlytics"
                app:layout_constraintTop_toBottomOf="@id/sw_crashlytics" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/sw_background_scan"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/switch_background_scan"
                app:layout_constraintBottom_toTopOf="@id/sw_popup_window"
                app:layout_constraintEnd_toEndOf="@id/sw_crashlytics"
                app:layout_constraintStart_toStartOf="@id/sw_crashlytics"
                app:layout_constraintTop_toBottomOf="@id/sw_reroute_calls" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/sw_popup_window"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/switch_popup_window"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/sw_crashlytics"
                app:layout_constraintStart_toStartOf="@id/sw_crashlytics"
                app:layout_constraintTop_toBottomOf="@id/sw_background_scan" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/image_qr_code"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/text_qr_code"
        android:scaleType="fitXY"
        android:src="@drawable/ic_chicken"
        android:translationZ="2dp"
        app:layout_constraintBottom_toBottomOf="@id/container_settings"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="@id/outsideGuideline"
        app:layout_constraintStart_toStartOf="@id/container_settings"
        app:layout_constraintTop_toTopOf="@id/container_settings" />

    <TextView
        android:id="@+id/text_key"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/image_qr_code"
        app:layout_constraintStart_toStartOf="@id/image_qr_code"
        app:layout_constraintTop_toBottomOf="@id/image_qr_code" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/buttonCamera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:backgroundTint="@color/fab_background"
        app:fabCustomSize="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/buttonRefresh"
        app:layout_constraintStart_toStartOf="@id/image_qr_code"
        app:layout_constraintTop_toBottomOf="@id/image_qr_code"
        app:maxImageSize="48dp"
        android:contentDescription="@string/fab_description_scan"
        app:srcCompat="@drawable/ic_camera" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/buttonRefresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:backgroundTint="@color/fab_background"
        app:fabCustomSize="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/image_qr_code"
        app:layout_constraintStart_toEndOf="@id/buttonCamera"
        app:layout_constraintTop_toBottomOf="@id/image_qr_code"
        app:maxImageSize="30dp"
        android:contentDescription="@string/fab_description_new"
        app:srcCompat="@drawable/ic_refresh_24" />


</androidx.constraintlayout.motion.widget.MotionLayout>